--- a/metric/elasticsearch/pom.xml
+++ b/metric/elasticsearch/pom.xml
@@ -6,7 +6,7 @@
   <name>elasticsearch</name>
   
   <properties>
-    <be.home>/Users/vpatil/Work/svn/be/trunk/build/Enterprise/exp/macosx/x86_64/dbg</be.home>
+    <be.home>//Path to point to the TIBCO Business Events installation home</be.home>
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
   </properties>
