--- a/metric/elasticsearch/pom.xml
+++ b/metric/elasticsearch/pom.xml
@@ -1,76 +1,80 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.tibco.metrics.store</groupId>
-  <artifactId>cep-elasticsearch</artifactId>
+  
+  <!-- parent pom -->
+  <parent>
+    <groupId>com.tibco.businessevents</groupId>
+    <artifactId>metric</artifactId>
+    <version>1.0</version>
+	<relativePath>../</relativePath>
+  </parent>
+
+  <groupId>com.tibco.businessevents</groupId>
+  <artifactId>elasticsearch</artifactId>
   <name>elasticsearch</name>
   <version>1.0.0</version>
-  
+
   <properties>
-    <be.home>//Path to point to the TIBCO Business Events installation home</be.home>
-    <maven.compiler.target>11</maven.compiler.target>
-    <maven.compiler.source>11</maven.compiler.source>
+	<elasticsearch.version>7.10.1</elasticsearch.version>
   </properties>
-    
+
   <dependencies>
-  	<dependency>
-  		<groupId>org.elasticsearch.client</groupId>
-  		<artifactId>elasticsearch-rest-high-level-client</artifactId>
-  		<version>7.10.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.tibco.businessevents</groupId>
-  		<artifactId>cep-common</artifactId>
-  		<version>6.1</version>
-  		<scope>system</scope>
-  		<systemPath>${be.home}/lib/cep-common.jar</systemPath>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.tibco.businessevents</groupId>
-  		<artifactId>cep-kernel</artifactId>
-  		<version>6.1</version>
-  		<scope>system</scope>
-  		<systemPath>${be.home}/lib/cep-kernel.jar</systemPath>
-  	</dependency>
+	<!-- Inheriting common dependencies -->
+	<dependency>
+		<groupId>com.tibco.businessevents</groupId>
+		<artifactId>cep-common</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.tibco.businessevents</groupId>
+		<artifactId>cep-kernel</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-api</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-engine</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.testcontainers</groupId>
+		<artifactId>testcontainers</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.testcontainers</groupId>
+		<artifactId>junit-jupiter</artifactId>
+	</dependency>
+
+	<!-- Metric implementation specific dependencies -->
+	<dependency>
+		<groupId>org.elasticsearch.client</groupId>
+		<artifactId>elasticsearch-rest-high-level-client</artifactId>
+		<version>${elasticsearch.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.testcontainers</groupId>
+		<artifactId>elasticsearch</artifactId>
+		<version>${testcontainer.verion}</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.7.30</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-core</artifactId>
+		<version>2.11.1</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.11</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.4</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <artifactSet>
-                <excludes>
-                  <!-- Duplicate BE jars -->
-                  <exclude>com.tibco.cep.common:cep-common</exclude>
-				  <exclude>com.tibco.cep.kernel:cep-kernel</exclude>
-				  <!-- Duplicate/conflicting tpcl jars -->
-				  <exclude>com.fasterxml.jackson.core:jackson-core</exclude>
-				  <exclude>com.fasterxml.jackson.dataformat:jackson-dataformat-cbor</exclude>
-				  <exclude>org.apache.logging.log4j:log4j-api</exclude>
-				  <exclude>org.apache.httpcomponents:httpclient</exclude>
-				  <exclude>org.apache.httpcomponents:httpcore</exclude>
-				  <exclude>org.apache.httpcomponents:httpcore-nio</exclude>
-				  <exclude>commons-codec:commons-codec</exclude>
-				  <exclude>commons-logging:commons-logging</exclude>
-                </excludes>
-              </artifactSet>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-	  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
-      </plugin>
-    </plugins>
-  </build>
 </project>
