--- a/channel/pom.xml
+++ b/channel/pom.xml
@@ -23,7 +23,7 @@
 
     <!-- sub modules - Include module names here as they are added  -->
     <modules>
-       <!--module>aws-sqs</module-->
+       <module>aws-sqs</module>
     </modules>
     
 </project>
