--- a/channel/aws-sqs/pom.xml
+++ b/channel/aws-sqs/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tibco.businessevents.contribution</groupId>
-    <artifactId>aws-sqs</artifactId>
-    <version>1.0</version>
+    <!-- parent pom -->
+    <parent>
+        <groupId>com.tibco.businessevents</groupId>
+        <artifactId>channel</artifactId>
+        <version>1.0</version>
+        <relativePath>../</relativePath>
+    </parent>
 
-    <properties>
-        <be.home>/opt/tibco/be61/be/6.1</be.home>
-        <be.version>6.1</be.version>
-        <junit.verion>5.4.2</junit.verion>
-        <testcontainer.verion>1.15.0</testcontainer.verion>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-    </properties>
+    <groupId>com.tibco.businessevents</groupId>
+    <artifactId>aws-sqs</artifactId>
+    <name>aws-sqs</name>
+    <version>1.0.0</version>
 
     <dependencyManagement>
         <dependencies>
@@ -29,65 +29,6 @@
 
         </dependencies>
     </dependencyManagement>
-
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <artifactSet>
-                                <excludes>
-                                    <exclude>*:cep-*</exclude>
-                                </excludes>
-                            </artifactSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-files-on-build</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${be.home}/lib/ext/tpcl</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>target</directory>
-                                    <include>${project.build.finalName}.${project.packaging}</include>
-                                    <filtering>false</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-    </build>
 
     <dependencies>
 
