--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,94 @@
         </dependency>
 	<dependency>
             <groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-external-tibco-tibcrypt</artifactId>
+            <artifactId>cep-backingstore</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/cep-backingstore.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-drivers</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/cep-drivers.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>be-functions</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/be-functions.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>TIBCrypt</artifactId>
             <version>${be.version}</version>
             <scope>system</scope>
             <systemPath>${be.home}/lib/ext/tibco/TIBCrypt.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>TIBCOrt</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/TIBCOrt.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>TIBCOxml_sdk_eclipse_5_60_100_2</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.sdk.eclipse_5.60.100.002.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>TIBCOxml_util_eclipse_5_60_100_1</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.util.eclipse_5.60.100.001.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>TIBCOxml_io_eclipse_5_60_100_1</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.io.eclipse_5.60.100.001.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>emf-ecore</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tpcl/emf/org.eclipse.emf.ecore_2.23.0.v20200630-0516.jar</systemPath>
+        </dependency>
+		<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>emf-common</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tpcl/emf/org.eclipse.emf.common_2.20.0.v20200822-0801.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>emf-ecore-xmi</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tpcl/emf/org.eclipse.emf.ecore.xmi_2.16.0.v20190528-0725.jar</systemPath>
+        </dependency>
+		<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>tibcoxml-wsdl</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.ws.wsdl.eclipse_5.60.100.001.jar</systemPath>
+        </dependency>
+	<dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-ui-rt-common</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/cep-ui-rt-common.jar</systemPath>
         </dependency>
         <!-- Other common dependencies like junit/testcontainers/etc-->
         <dependency>
