--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <be.home>/home/rakulkar/newtibcohome/6.0/be/6.1</be.home>
+    <be.home>//Path to point to the TIBCO BusinessEvents installation home</be.home>
     <be.version>6.1</be.version>
     <junit.verion>5.4.2</junit.verion>
     <testcontainer.verion>1.15.1</testcontainer.verion>
