--- a/store/pom.xml
+++ b/store/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <!-- parent pom -->
     <parent>
@@ -23,7 +20,8 @@
 
     <!-- sub modules - Include module names here as they are added  -->
     <modules>
-       <module>redis</module>
-    </modules>
+    <module>redis</module>
+    <module>mongoDB</module>
+  </modules>
     
 </project>
