--- a/catalog/cassandra-catalog-fn/pom.xml
+++ b/catalog/cassandra-catalog-fn/pom.xml
@@ -15,6 +15,10 @@
 	<artifactId>cassandra-catalog-fn</artifactId>
 	<name>cassandra-catalog-fn</name>
 	<version>1.0.0</version>
+	
+	<properties>
+		<cassandra-version>4.15.0</cassandra-version>
+	</properties>
 
 	<build>
 		<plugins>
@@ -110,19 +114,37 @@
 			<groupId>com.tibco.businessevents</groupId>
 			<artifactId>cep-external-tibcrypt</artifactId>
 		</dependency>
-
+		
+		
+		<!-- https://mvnrepository.com/artifact/com.datastax.oss/java-driver-core -->
 		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-core</artifactId>
-			<version>3.11.1</version>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-core-shaded</artifactId>
+			<version>${cassandra-version}</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.datastax.oss/java-driver-shaded-guava -->
+		<dependency>
+		    <groupId>com.datastax.oss</groupId>
+		    <artifactId>java-driver-shaded-guava</artifactId>
+		    <version>25.1-jre</version>
 		</dependency>
 
+		
+		<!-- https://mvnrepository.com/artifact/com.datastax.oss/java-driver-query-builder -->
 		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-extras</artifactId>
-			<version>3.11.1</version>
+		    <groupId>com.datastax.oss</groupId>
+		    <artifactId>java-driver-query-builder</artifactId>
+			<version>${cassandra-version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.datastax.oss</groupId>
+					<artifactId>java-driver-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
+		
+		
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
