Initial commit to setup the repo - kinesis channel

--- a/channel/pom.xml
+++ b/channel/pom.xml
@@ -31,6 +31,7 @@
     <!-- sub modules - Include module names here as they are added  -->
     <modules>
        <module>aws-sqs</module>
+       <module>kinesis</module>
     </modules>
     
 </project>
