--- a/catalog/cassandra-catalog-fn/pom.xml
+++ b/catalog/cassandra-catalog-fn/pom.xml
@@ -157,6 +157,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.testcontainers</groupId>
+		    <artifactId>cassandra</artifactId>
+		    <version>1.18.1</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
