--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -23,7 +23,7 @@
 
     <!-- sub modules - Include module names here as they are added  -->
     <modules>
-       <module>aws-catalog-fn</module>
+       <!--<module>aws-catalog-fn</module>-->
        <module>cassandra-catalog-fn</module>
     </modules>
     
